--- a/src/renderer/src/assets/settings.css
+++ b/src/renderer/src/assets/settings.css
@@ -220,6 +220,7 @@
   flex-direction: row;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .stg-sidebar {
